--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -9,38 +9,6 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<style type="text/css">
-			.jiaoyu,
-			.dongtai1 {
-				width: 6rem;
-				height: 6rem;
-				border: solid;
-				border-width: 0;
-				border-radius: 5px;
-				border-color: #929292;
-				padding: 0.7rem;
-				text-align: center;
-				position: absolute;
-			}
-			
-			.jiaoyu {
-				top: 320px;
-				left: 10px;
-				z-index: 1;
-			}
-			
-			.dongtai1 {
-				top: 320px;
-				left: 80px;
-				z-index: 1;
-			}
-			
-			div>.icon-jiaoyu:before,
-			.icon-dongtai1:before {
-				font-size: 4.0rem;
-				/*color: gray;*/
-			}
-		</style>
 
 	</head>
 
@@ -63,14 +31,17 @@
 					<a class="mui-icon iconfont icon-xiangce"></a>
 				</div>
 			</div>
-			<div class="jiaoyu">
-				<a id="zone" class="mui-icon iconfont icon-jiaoyu" style="color: rgb(0,165,224);"></a>
-				<p>家校圈</p>
+			<div style="margin-left: -10px;">
+				<div class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline; top: 280px;">
+					<label style="font-size: 15px;">家校圈</label>
+					<input name="checkbox" value="0" type="checkbox" disabled="disabled" style="margin-top: -7px;" checked>
+				</div>
+				<div class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; top: 280px;">
+					<label style="font-size: 15px;">展现</label>
+					<input id="chenckBox" name="checkbox" value="1" type="checkbox" style="margin-top: -7px;">
+				</div>
 			</div>
-			<div class="dongtai1">
-				<a id="kejiao" class="mui-icon iconfont icon-dongtai1" style="color: gray;"></a>
-				<p>展现</p>
-			</div>
+
 
 		</div>
 
@@ -88,10 +59,6 @@
 	</script>
 	<script>
 		var utids = [];
-		var selectedflag = {
-			zone: 0,
-			kejiao: 0
-		};
 		mui.plusReady(function() {
 				var userInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO); //用户id
 
@@ -105,26 +72,8 @@
 				//			});
 				var title = document.getElementById('title');
 				title.innerText = userInfo.unick;
-				events.addTap('zone', function() {
-					//						if(this.style.color == 'gray'){
-					//							this.style.color = 'rgb(0,165,224)'
-					//							selectedflag.zone = 1;
-					//						}else{
-					//							this.style.color = 'gray'
-					//							selectedflag.zone = 0;
-					//						}
 
-				})
-				events.addTap('kejiao', function() {
-					if(this.style.color == 'gray') {
-						this.style.color = 'rgb(0,165,224)'
-						selectedflag.kejiao = 1;
-					} else {
-						this.style.color = 'gray'
-						selectedflag.kejiao = 0;
-					}
 
-				})
 				events.addTap('take_pic', function() {
 					camera.getPic(camera.getCamera(), function(path) {
 
@@ -140,8 +89,10 @@
 
 					});
 				});
+
 				//发布按钮
 				events.addTap('publish', function() {
+					console.log(333333333)
 					var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 					console.log(tempInfo.uarea.acode)
 
@@ -158,11 +109,13 @@
 						tempText = replaceAllBL(tempText)
 					}
 					var pubScopes;
-					if(selectedflag.kejiao == 0) {
+					var chenckBox =  document.getElementById('chenckBox')
+					if(!chenckBox.checked) {
 						pubScopes = '[1]';
 					} else {
 						pubScopes = '[1,2]';
 					}
+					console.log(pubScopes);
 					var postData = {
 						userId: userInfo.utid,
 						msgContent: tempText,
