--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -19,22 +19,8 @@
 		<div class="mui-content">
 			<div class="navigation" role="navigation">
 				<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted main-navigation">
-					<div class="mui-scroll tabs-classes">
-						<a class="mui-control-item mui-active">
-							全部
-						</a>
-						<a class="mui-control-item">
-							教学
-						</a>
-						<a class="mui-control-item">
-							健康
-						</a>
-						<a class="mui-control-item">
-							美食
-						</a>
-						<a class="mui-control-item">
-							其他
-						</a>
+					<div id="subjects-container" class="mui-scroll tabs-channels">
+					
 					</div>
 				</div>
 				<div class="more-navigation">
@@ -46,9 +32,9 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<script type="text/javascript">
-			events.initSubPage('qiuzhi-sub.html');
-		</script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/publicQiuzhiProtocol.js"></script>
+		<script src="../../js/qiuzhi/qiuzhi-home.js"></script>
 	</body>
 
 </html>
