--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div class="mui-scroll">
-				<ul class="mui-table-view">
+				<ul id="list-container" class="mui-table-view">
 				</ul>
 			</div>
 			<a id="submit-question" class="mui-icon iconfont icon-bianji"></a>
@@ -146,50 +146,8 @@
 			});
 		}
 
-		//1.获取所有话题
-		function requestAllChannels() {
-			//所需参数
-			var comData = {
-				pageIndex: '1', //当前页数
-				pageSize: '0' //每页记录数,传入0，获取总记录数
-			};
-			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//1.获取所有话题
-			postDataQZPro_getAllChannels(comData, wd, function(data) {
-				wd.close();
-				console.log('获取所有话题:' + JSON.stringify(data));
-				if(data.RspCode == 0) {
-					var temArr = data.RspData.Data;
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			});
-		}
 
-		//4.获取所有符合条件问题
-		function requestAskList() {
-			//所需参数
-			var comData = {
-				askTitle: '', //问题标题,用于查找，可输入部分标题
-				channelId: '0', //话题ID,传入0，获取所有话题数据
-				pageIndex: '1', //当前页数
-				pageSize: '10' //每页记录数,传入0，获取总记录数
-			};
-			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//4.获取所有符合条件问题
-			postDataQZPro_getAsksByCondition(comData, wd, function(data) {
-				wd.close();
-				console.log('获取所有符合条件问题:' + JSON.stringify(data));
-				if(data.RspCode == 0) {
-
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			});
-		}
-
+		
 		//5.获取某个问题的详情
 		function requestAskDetail() {
 			//所需参数
