--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -8,69 +8,28 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<link href="../../css/qiuzhi/qiuzhi-answerDetailSub.css" rel="stylesheet" />
 
 	</head>
 
 	<body>
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul id="ul" class="mui-table-view">
-					<!--<li class="mui-table-view-cell mui-media ">
-						中小学辅导机构的未来到底名不明朗？
-					</li>
-					<li class="mui-table-view-cell mui-media ">
-						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
-						<div class="mui-media-body">
-							李欣芸
-							<p class='mui-ellipsis'>专栏:教育、美食</p>
-							<button class="mui-btn-green mui-pull-right" style="margin-top: -40px;">关注</button>
-						</div>
-					</li>
-					<li class="mui-table-view-cell mui-media ">
-						中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导 机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明 朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗
-					</li>-->
+				<ul id="list-container" class="mui-table-view">
 				</ul>
 			</div>
-
+			<div class="input-footerContainer">
+				<input type="text" class="input-text" />
+				<a id="send-comment" class="mui-icon iconfont icon-shexiangji send-icon"></a>
+			</div>
 		</div>
-		<script type="text/javascript">
-			var datasource = {};
-			mui.init();
-			mui.plusReady(function() {
-				//8.获取某个回答的详情
-				requestAnswerDetail();
-			})
-
-			function refreshUI() {
-				var ul = document.getElementById('ul');
-				var li_title = document.createElement("li");
-				li_title.className = 'mui-table-view-cell mui-media';
-				li_title.innerHTML = datasource.AskTitle;
-				var li_person = document.createElement("li");
-				li_person.className = 'mui-table-view-cell mui-media';
-				li_person.innerHTML = '<img class="mui-media-object mui-pull-left" src="'+updateHeadImg(datasource.uimg,2)+'">' +
-					'<div class="mui-media-body">' +
-					datasource.unick +
-					'<p class="mui-ellipsis">' + '专栏:教育、美食' + '</p>' +
-					'<button class="mui-btn-green mui-pull-right" style="margin-top: -40px;">' + '关注' + '</button>' +
-					'</div>';
-				var li_content = document.createElement("li");
-				li_content.className = 'mui-table-view-cell mui-media';
-				li_content.innerHTML = datasource.AnswerContent;
-				ul.appendChild(li_title);
-				ul.appendChild(li_person);
-				ul.appendChild(li_content);
-
-			}
-
-			
-		</script>
-
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/qiuzhi/qiuzhi-answerDetailSub.js"></script>
 	</body>
 
 </html>
