--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -9,8 +9,6 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/qiuzhi-answerDetailSub.css" rel="stylesheet" />
-
-
 	</head>
 
 	<body>
@@ -22,7 +20,7 @@
 			</div>
 			<div class="input-footerContainer">
 				<input type="text" class="input-text" />
-				<a id="send-comment" class="mui-icon iconfont icon-shexiangji send-icon"></a>
+				<a id="send-comment" class="mui-icon iconfont icon-fasong send-icon"></a>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
