求知主界面向子页面传值

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -12,6 +12,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet"/>
 		<link href="../../css/qiuzhi/qiuzhi.css" rel="stylesheet" />
 	</head>
 
@@ -24,9 +25,10 @@
 					</div>
 				</div>
 				<div class="more-navigation">
-					<a>
-						导航
+					<a class="iconfont icon-qita1">
+						<!--导航-->
 					</a>
+					<p>导航</p>
 				</div>
 			</div>
 		</div>
