--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -14,13 +14,13 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left " ></a>
 			<h1 id="title" class="mui-title"></h1>
 			<a id="publish" class="mui-pull-right">发布</a>
 		</header>
 		<div class="mui-content">
 			<div class="input-content">
-				<textarea id="input-content" placeholder="请输入内容"></textarea>
+				<textarea id="input-content" placeholder="这一刻的想法"></textarea>
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji"></a>
 				</div>
@@ -32,16 +32,18 @@
 				</div>
 			</div>
 			<div style="margin-left: -10px;">
-				<div class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline; top: 280px;">
+				<div  style="width:50; height:30px; float:left; display:inline; top: 5px;padding-left: 10px;">
+					<p style="margin-top: 275px;margin-left: 10px;margin-right: 10px;font-size: 15px;width: 100px;color: black;">发布到:</p>
+				</div>
+				<div class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline; top: 275px;margin-left: -60px;">
 					<label style="font-size: 15px;">家校圈</label>
 					<input name="checkbox" value="0" type="checkbox" disabled="disabled" style="margin-top: -7px;" checked>
 				</div>
-				<div class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; top: 280px;">
+				<div class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; top: 275px;">
 					<label style="font-size: 15px;">展现</label>
 					<input id="chenckBox" name="checkbox" value="1" type="checkbox" style="margin-top: -7px;">
 				</div>
 			</div>
-
 
 		</div>
 
@@ -72,7 +74,6 @@
 				//			});
 				var title = document.getElementById('title');
 				title.innerText = userInfo.unick;
-
 
 				events.addTap('take_pic', function() {
 					camera.getPic(camera.getCamera(), function(path) {
@@ -109,7 +110,7 @@
 						tempText = replaceAllBL(tempText)
 					}
 					var pubScopes;
-					var chenckBox =  document.getElementById('chenckBox')
+					var chenckBox = document.getElementById('chenckBox')
 					if(!chenckBox.checked) {
 						pubScopes = '[1]';
 					} else {
