科教订制城市按钮监听修改

--- a/JiaoBaoYun-hb/html/scienceeducation/senedu_show_main.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/senedu_show_main.html
@@ -36,6 +36,9 @@
 					waiting: {
 						title: '正在加载...'
 					},
+					show: {
+						aniShow: 'none'
+					}
 				});
 				//---获取数据---end---
 			});
