--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -20,7 +20,7 @@
 		</header>
 		<div class="mui-content">
 			<div class="mui-input-row">
-				<input id="input" type="text" class="mui-input-clear">
+				<input id="input" type="text">
 			</div>
 		</div>
 		<script type="text/javascript">
