--- a/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
@@ -23,6 +23,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/utils/slide-selector.js"></script>
 		<script src="../../js/senedu/senedu-home.js"></script>
 	</body>
