--- a/JiaoBaoYun-hb/html/show/show_home.html
+++ b/JiaoBaoYun-hb/html/show/show_home.html
@@ -21,6 +21,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/utils/slide-selector.js"></script>
 		<script src="../../js/show/show.js"></script>
 	</body>
