切换页面加载数据逻辑

--- a/JiaoBaoYun-hb/html/scienceeducation/senedu-sub.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/senedu-sub.html
@@ -73,7 +73,7 @@
 					console.log("科教子页面获取的城市信息：" + JSON.stringify(SECity));
 					//获取对应城市新闻
 					if (!SECity.array||SECity.array.length == 0) {
-
+						SECity.eduIndex=1;
 						requestCityNews(SECity.acode);
 					}
 
